k8s/discovery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery
  template:
    metadata:
      labels:
        app: discovery
    spec:
      containers:
      - name: discovery
        image: okteto.dev/discovery-service:dev
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: discovery
  annotations:
    dev.okteto.com/auto-ingress: "true"
spec:
  type: ClusterIP
  selector:
    app: discovery
  ports:
  - port: 8080
    targetPort: 8080
