k8s/organization-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organization
  labels:
    app: organization
spec:
  replicas: 1
  selector:
    matchLabels:
      app: organization
  template:
    metadata:
      labels:
        app: organization
    spec:
      containers:
      - name: organization
        image: okteto.dev/organization-service:dev
        ports:
        - containerPort: 8080
        # env:
        # - name: MONGO_DATABASE
        #   valueFrom:
        #     configMapKeyRef:
        #       name: mongodb
        #       key: database-name
        # - name: MONGO_USERNAME
        #   valueFrom:
        #     secretKeyRef:
        #       name: mongodb
        #       key: database-user
        # - name: MONGO_PASSWORD
        #   valueFrom:
        #     secretKeyRef:
        #       name: mongodb
        #       key: database-password
---
apiVersion: v1
kind: Service
metadata:
  name: organization
  labels:
    app: organization
    spring-boot: "true"
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: organization
