k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: watchlisttracker
  annotations:
    dev.okteto.com/generate-host: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: gateway
          servicePort: 8080
      - path: /organization
        backend:
          serviceName: organization
          servicePort: 8080
